<resources>
    <string name="app_name">InfoAmigos</string>
    <string name="mainStrTextView">Info:</string>
    <string name="strDeuda">Deuda:</string>
    <string name="strBAdd">Add</string>
    <string name="strBDetalles">Details</string>
    <string name="strBDeuda">Deuda</string>
    <string name="strNombre">Nombre:</string>
    <string name="strEmail">Email:</string>
    <string name="strTelefono">Telefono:</string>
    <string name="StrMovil">Movil:</string>
    <string name="strAbout">Acerca de</string>
    <string name="strConfig">Configuracion</string>
    <string name="strBorrar">Borrar</string>
    <string name="strDetalle">Detalle</string>
    <string name="strPreferenciaUsuario">Preferencias de usuario</string>
    <string name="strPreferenciasApp">Preferencias de aplicacion</string>
    <string name="strNombreUsuario">¿Como le llamamos?</string>
    <string name="strMorosos">Morosos</string>
    <string name="strCargarImagen">Cargar Imágenes desde galeria</string>
</resources>