<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mainStrTextView" />

        <TextView
            android:id="@+id/tMainInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lvListMain"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="147dp"
                android:layout_height="match_parent"
                android:layout_weight="?android:attr/disabledAlpha"
                android:text="@string/strDeuda"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/tMainDeuda"
                android:layout_width="309dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <Button
            android:id="@+id/bMainAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strBAdd" />

        <Button
            android:id="@+id/bMainDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strBDetalles" />

        <Button
            android:id="@+id/bDeudaMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strBDeuda" />

    </LinearLayout>

</LinearLayout>